alteracao de pasta

--- a/modulo1/semana1/imagens.html
+++ b/modulo1/semana1/imagens.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="/imagens/code.png" type="image/x-icon">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="shortcut icon" href="./imagens/code.png" type="image/x-icon">
+    <link rel="stylesheet" href="./css/style.css">
     <title>DEVinHouse</title>
 </head>
 <body>
@@ -27,10 +27,10 @@
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Porro officiis at rem reprehenderit, iusto temporibus placeat atque, architecto, magni eveniet qui maxime autem. Iste temporibus omnis a rem debitis modi inventore repudiandae ipsa.</p> 
             <div class="fotos">
                 <div>
-                    <img src="/pexels-pixabay-302820.jpg" alt="foto de cidade iluminada">
+                    <img src="./pexels-pixabay-302820.jpg" alt="foto de cidade iluminada">
                 </div>  
                 <div>
-                    <img class="filhote" src="/imagens/pexels-h-emre-773471.jpg" alt="imagem de cidade com bonde">
+                    <img src="./imagens/pexels-h-emre-773471.jpg" alt="imagem de cidade com bonde">
                 </div>     
                 <div>
                     <img src="https://images.pexels.com/photos/92866/pexels-photo-92866.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="imagem de rua com carros antigos">
@@ -47,9 +47,9 @@
         <p>Site desenvolvido por Anderson Aguiar. Estudante de desenvolvimento Full Stack pelo Senai DEVinHouse, também é utodidata em Arduino, PHP e C#. Desenvolveu algumas aplicações para automação industrial de um residencial realizando o controle e monitoramento de sistemas de exaustão, bombas e cicuitos elétricos. Adora viajar, tem animais de estimação e gosta muito de estar em contato com a natureza. Para saber mais, visite minhas redes clicando nos links abaixo.</p>
         <p>&copy;Todos os direitos reservados.</p>
         <div class="redes">
-            <a href="https://www.instagram.com/anders.aguiar/" target="_blank" rel="external"><img src="/imagens/instagram.png" alt="logo do instagram"></a>       
-            <a href="https://www.linkedin.com/in/andersonlaguiar/" target="_blank" rel="external"><img src="/imagens/linkedin.png" alt="logo do linkedin"></a>
-            <a href="https://github.com/andersonaguia" target="_blank" rel="external"><img src="/imagens/github.png" alt="logo do github"></a>
+            <a href="https://www.instagram.com/anders.aguiar/" target="_blank" rel="external"><img src="./imagens/instagram.png" alt="logo do instagram"></a>       
+            <a href="https://www.linkedin.com/in/andersonlaguiar/" target="_blank" rel="external"><img src="./imagens/linkedin.png" alt="logo do linkedin"></a>
+            <a href="https://github.com/andersonaguia" target="_blank" rel="external"><img src="./imagens/github.png" alt="logo do github"></a>
         </div>
     </footer>
 </body>
