--- a/modulo1/semana1/index.html
+++ b/modulo1/semana1/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="/imagens/code.png" type="image/x-icon">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="shortcut icon" href="./imagens/code.png" type="image/x-icon">
+    <link rel="stylesheet" href="./css/style.css">
     <title>DEVinHouse</title>
 </head>
 <body>
@@ -35,7 +35,7 @@
             </div>                        
             <div class="botao">
                 <p>Clique no botão e saiba mais</p>
-                <a href="imagens.html"><img src="/imagens/click.png" alt=""></a>
+                <a href="imagens.html"><img src="./imagens/click.png" alt=""></a>
             </div>
         </div>
         <h2>Lorem, ipsum dolor.</h2>
@@ -46,7 +46,7 @@
                 <h2>Lorem ipsum dolor sit.</h2>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Libero ipsa accusamus aut reprehenderit voluptate neque veritatis ea doloribus minus repudiandae magnam iure suscipit, error, officiis voluptas deserunt est adipisci, eveniet aspernatur consequatur officia cumque. Amet sequi odio praesentium maiores molestias ut ullam esse, tempora voluptates nihil temporibus in veniam, distinctio sint vitae alias vero maxime, aut libero labore aliquid quod culpa cum. Deleniti quis, omnis, delectus optio sunt in natus magni quam ad atque aliquid quas repellat placeat error hic consequatur eum voluptatibus unde. Voluptates laudantium laborum possimus a amet facilis aut, necessitatibus quisquam neque ad alias atque impedit! Officiis, voluptatem est.</p>
                 <div class="img-intro">
-                    <img src="/imagens/pessoa.jpg" alt="imagem de um homem">
+                    <img src="./imagens/pessoa.jpg" alt="imagem de um homem">
                     <div class="depoimento">
                         <h3>Lorem ipsum dolor sit amet.</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus suscipit ipsam praesentium, quaerat nemo libero quasi quisquam earum sunt tempore reprehenderit neque.</p>
@@ -70,9 +70,9 @@
         <p>Site desenvolvido por Anderson Aguiar. Estudante de desenvolvimento Full Stack pelo Senai DEVinHouse, também é utodidata em Arduino, PHP e C#. Desenvolveu algumas aplicações para automação industrial de um residencial realizando o controle e monitoramento de sistemas de exaustão, bombas e cicuitos elétricos. Adora viajar, tem animais de estimação e gosta muito de estar em contato com a natureza. Para saber mais, visite minhas redes clicando nos links abaixo.</p>
         <p>&copy;Todos os direitos reservados.</p>
         <div class="redes">
-            <a href="https://www.instagram.com/anders.aguiar/" target="_blank" rel="external"><img src="/imagens/instagram.png" alt="logo do instagram"></a>       
-            <a href="https://www.linkedin.com/in/andersonlaguiar/" target="_blank" rel="external"><img src="/imagens/linkedin.png" alt="logo do linkedin"></a>
-            <a href="https://github.com/andersonaguia" target="_blank" rel="external"><img src="/imagens/github.png" alt="logo do github"></a>
+            <a href="https://www.instagram.com/anders.aguiar/" target="_blank" rel="external"><img src="./imagens/instagram.png" alt="logo do instagram"></a>       
+            <a href="https://www.linkedin.com/in/andersonlaguiar/" target="_blank" rel="external"><img src="./imagens/linkedin.png" alt="logo do linkedin"></a>
+            <a href="https://github.com/andersonaguia" target="_blank" rel="external"><img src="./imagens/github.png" alt="logo do github"></a>
         </div>        
     </footer>    
 </body>
