--- a/modulo1/semana2/index.html
+++ b/modulo1/semana2/index.html
@@ -4,23 +4,107 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="">
-    <link rel="shortcut icon" href="./imagens/logo-music.png" type="image/x-icon">
+    <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="./imagens/logo-music.png" type="image/x-icon">   
     <title>DEVinHouse</title>
 </head>
 <body>
-    <nav class="navbar">
-        <div class="navbar-container">
-            <img src="./imagens/logo-music.png" alt="logo nota musical">
-            <h1>Arena Show</h1>
-            <div class="navbar-items">
-                <ul>
-                    <li><a href="#eventos">eventos</a></li>
-                    <li><a href="#sobre">sobre</a></li>
-                    <li><a href="#contato">contato</a></li>
-                </ul>
-            </div>
-        </div>
-    </nav>
+    <div class="conteudo">
+        <header>
+            <div class="logo">                
+                <img src="./imagens/logo-music.png" alt="logo nota musical">
+                <h1>Entretenimento</h1><i class="fa-regular fa-burger-cheese"></i>
+            </div> 
+            <nav class="navbar-items">                
+                    <ul>
+                        <li><a href="#eventos" alt="eventos">eventos</a></li>
+                        <li><a href="#sobre" alt="sobre">sobre</a></li>
+                        <li><a href="#contato" alt="contato">contato</a></li>
+                    </ul>                
+            </nav>           
+        </header>
+        <main>
+            <h2>Em destaque</h2>
+            <section>
+                <div class="evento-destaque">
+                    <img src="./imagens/reveilon-2023.png" alt="imagem reveillon jeri">
+                    <div class="destaque-items">
+                        <div class="espaco-items">
+                            <ul>
+                                <li class="data"><p>31 DEZ</p></li>
+                                <li><h3>Réveillon Vira Jeri 2023</h3></li>
+                                <li class="address">
+                                    <i class="fa-solid fa-location-dot"></i>
+                                    <p>Dunas de Jericoacoara, Jijoca de Jericoacoara - CE</p>
+                                </li>
+                            </ul>
+                            <div>                               
+                            </div>
+                        </div>                       
+                        <a  href=""><img class="saiba-mais" src="./imagens/saiba-mais-2.png" alt=""></a>
+                    </div>                       
+                </div>
+            </section> 
+            <h2>Mais eventos</h2>
+            <section>
+                <div class="eventos-todos">                    
+                    <div class="eventos">
+                        <img src="./imagens/carnaval-salvador.png" alt="logo carnaval de salvador">
+                        <div class="eventos-items">
+                            <ul>
+                                <li class="data"><p>23 > 29 SET</p></li>
+                                <li><h3>Carnaval Salvador 2023</h3></li>
+                                <li class="address">
+                                    <i class="fa-solid fa-location-dot"></i>
+                                    <p>Curta toda a alegria do maior carnaval do Brasil</p>
+                                </li>
+                            </ul>
+                            <div>                               
+                            </div>
+                        </div>                       
+                        <a  href=""><img class="saiba-mais" src="./imagens/saiba-mais-2.png" alt=""></a>
+                    </div>
+                    <div class="eventos">
+                        <img src="./imagens/evidence.png" alt="imagem do evento evidence">
+                        <div class="eventos-items">
+                            <ul>
+                                <li class="data"><p>SEX, 10 AGO 23:00</p></li>
+                                <li><h3>EVIDENCE - WE ARE BACK</h3></li>
+                                <li class="address">
+                                    <i class="fa-solid fa-location-dot"></i>
+                                    <p>Sonora Garden - São Paulo, SP</p>
+                                </li>
+                            </ul>
+                            <div>                               
+                            </div>
+                        </div>                       
+                        <a  href="https://www.sympla.com.br/evento/evidence-we-are-back/1588762?lang=PT" target="_blank" rel="external"><img class="saiba-mais" src="./imagens/saiba-mais-2.png" alt=""></a>
+                    </div>
+                    <div class="eventos">
+                        <img src="./imagens/sampa-sky.webp" alt="imagem da cidade de São Paulo vista de um edifício">
+                        <div class="eventos-items">
+                            <ul>
+                                <li class="data"><p>23 AGO > 28 AGO</p></li>
+                                <li><h3>SAMPA SKY</h3></li>
+                                <li class="address">
+                                    <i class="fa-solid fa-location-dot"></i>
+                                    <p>Praça Pedro Lessa, 110 - Ed. Mirante do Vale, São Paulo - São Paulo</p>
+                                </li>
+                            </ul>
+                            <div>                               
+                            </div>
+                        </div>                       
+                        <a  href="https://bileto.sympla.com.br/event/67668/d/142017" target="_blank" rel="external"><img class="saiba-mais" src="./imagens/saiba-mais-2.png" alt=""></a>
+                    </div>
+                </div>
+            </section>          
+        </main>       
+    </div>
+    <footer>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sint maxime saepe perspiciatis molestias omnis voluptatibus asperiores a fugiat repellendus praesentium, aut nihil! Temporibus fugit iure aliquam aspernatur enim neque reiciendis reprehenderit deserunt quisquam totam. Aspernatur facilis animi explicabo at ducimus fugiat qui. Velit atque ducimus quo suscipit dicta veniam assumenda!</p>
+        <p>&copy;Todos os direitos reservados.</p>
+    </footer>  
+    <script src="https://kit.fontawesome.com/eb13803bec.js" crossorigin="anonymous"></script>  
 </body>
+
 </html>
