[M1S02] Ex 3 - Evento destacado

--- a/modulo1/semana2/index.html
+++ b/modulo1/semana2/index.html
@@ -8,98 +8,98 @@
     <link rel="shortcut icon" href="./imagens/logo-music.png" type="image/x-icon">   
     <title>DEVinHouse</title>
 </head>
-<body>
-    <div class="conteudo">
-        <header>
-            <div class="logo">                
-                <img src="./imagens/logo-music.png" alt="logo nota musical">
-                <h1>Entretenimento</h1><i class="fa-regular fa-burger-cheese"></i>
-            </div> 
-            <nav class="navbar-items">                
-                    <ul>
-                        <li><a href="#eventos" alt="eventos">eventos</a></li>
-                        <li><a href="#sobre" alt="sobre">sobre</a></li>
-                        <li><a href="#contato" alt="contato">contato</a></li>
-                    </ul>                
-            </nav>           
-        </header>
-        <main>
-            <h2>Em destaque</h2>
-            <section>
-                <div class="evento-destaque">
-                    <img src="./imagens/reveilon-2023.png" alt="imagem reveillon jeri">
-                    <div class="destaque-items">
-                        <div class="espaco-items">
-                            <ul>
-                                <li class="data"><p>31 DEZ</p></li>
-                                <li><h3>Réveillon Vira Jeri 2023</h3></li>
-                                <li class="address">
-                                    <i class="fa-solid fa-location-dot"></i>
-                                    <p>Dunas de Jericoacoara, Jijoca de Jericoacoara - CE</p>
-                                </li>
-                            </ul>
-                            <div>                               
-                            </div>
-                        </div>                       
-                        <a  href=""><img class="saiba-mais" src="./imagens/saiba-mais-2.png" alt=""></a>
-                    </div>                       
+<body>    
+    <header>
+        <div class="logo">
+            <figure>
+                <img src="./imagens/logo-music.png" alt="logo nota musical">                    
+            </figure>                
+            <h1>Entretenimento</h1><i class="fa-regular fa-burger-cheese"></i>
+        </div> 
+        <nav class="navbar-items">                
+            <ul>
+                <li><a href="#eventos" alt="eventos">eventos</a></li>
+                <li><a href="#sobre" alt="sobre">sobre</a></li>
+                <li><a href="#contato" alt="contato">contato</a></li>
+            </ul>                
+        </nav>           
+    </header>
+    <main>            
+        <section class="destaque">                
+            <h2>Em destaque</h2>                              
+            <div class="evento-destaque">
+                <figure>
+                   <img src="./imagens/reveilon-2023.png" alt="imagem reveillon Jericoacoara">
+                </figure>                    
+                <div class="destaque-items">
+                    <div class="espaco-items">
+                        <ul>
+                            <li class="data"><p>31 DEZ</p></li>
+                            <li><h3>Réveillon Vira Jeri 2023</h3></li>
+                            <li class="address">
+                                <i class="fa-solid fa-location-dot"></i>
+                                <p>Dunas de Jericoacoara, Jijoca de Jericoacoara - CE</p>
+                            </li>
+                        </ul>
+                    <div>                               
                 </div>
-            </section> 
-            <h2>Mais eventos</h2>
-            <section>
-                <div class="eventos-todos">                    
-                    <div class="eventos">
-                        <img src="./imagens/carnaval-salvador.png" alt="logo carnaval de salvador">
-                        <div class="eventos-items">
-                            <ul>
-                                <li class="data"><p>23 > 29 SET</p></li>
-                                <li><h3>Carnaval Salvador 2023</h3></li>
-                                <li class="address">
-                                    <i class="fa-solid fa-location-dot"></i>
-                                    <p>Curta toda a alegria do maior carnaval do Brasil</p>
-                                </li>
-                            </ul>
-                            <div>                               
-                            </div>
-                        </div>                       
-                        <a  href=""><img class="saiba-mais" src="./imagens/saiba-mais-2.png" alt=""></a>
-                    </div>
-                    <div class="eventos">
-                        <img src="./imagens/evidence.png" alt="imagem do evento evidence">
-                        <div class="eventos-items">
-                            <ul>
-                                <li class="data"><p>SEX, 10 AGO 23:00</p></li>
-                                <li><h3>EVIDENCE - WE ARE BACK</h3></li>
-                                <li class="address">
-                                    <i class="fa-solid fa-location-dot"></i>
-                                    <p>Sonora Garden - São Paulo, SP</p>
-                                </li>
-                            </ul>
-                            <div>                               
-                            </div>
-                        </div>                       
-                        <a  href="https://www.sympla.com.br/evento/evidence-we-are-back/1588762?lang=PT" target="_blank" rel="external"><img class="saiba-mais" src="./imagens/saiba-mais-2.png" alt=""></a>
-                    </div>
-                    <div class="eventos">
-                        <img src="./imagens/sampa-sky.webp" alt="imagem da cidade de São Paulo vista de um edifício">
-                        <div class="eventos-items">
-                            <ul>
-                                <li class="data"><p>23 AGO > 28 AGO</p></li>
-                                <li><h3>SAMPA SKY</h3></li>
-                                <li class="address">
-                                    <i class="fa-solid fa-location-dot"></i>
-                                    <p>Praça Pedro Lessa, 110 - Ed. Mirante do Vale, São Paulo - São Paulo</p>
-                                </li>
-                            </ul>
-                            <div>                               
-                            </div>
-                        </div>                       
-                        <a  href="https://bileto.sympla.com.br/event/67668/d/142017" target="_blank" rel="external"><img class="saiba-mais" src="./imagens/saiba-mais-2.png" alt=""></a>
-                    </div>
+            </div>                       
+            <a  href="https://www.sympla.com.br/evento/reveillon-vira-jeri-2023/1520594" target="_blank" rel="external"><img class="saiba-mais" src="./imagens/saiba-mais-2.png" alt="imagem botão saiba mais"></a>
+        </section>
+        <section class="todos"> 
+            <h2>Todos os eventos</h2>            
+            <div class="eventos-todos">               
+                <div class="eventos">
+                    <figure>
+                        <img src="./imagens/pixar.webp" alt="imagem pixar in concert">
+                    </figure>                        
+                    <div class="eventos-items">
+                        <ul>
+                            <li class="data"><p>09 JUL > 17 JUL</p></li>
+                            <li><h3>Pixar in Concert</h3></li>
+                            <li class="address">
+                                <i class="fa-solid fa-location-dot"></i>
+                                <p>Teatro Alfa - São Paulo, SP</p>
+                            </li>
+                        </ul>
+                        <a  href="https://bileto.sympla.com.br/event/73354/d/138862" target="_blank" rel="external" alt="PixarinConcert"><img class="saiba-mais" src="./imagens/saiba-mais-2.png" alt=""></a> 
+                    </div>                               
                 </div>
-            </section>          
-        </main>       
-    </div>
+                <div class="eventos">
+                    <figure>
+                        <img src="./imagens/farol.webp" alt="imagem farol santander">
+                    </figure>                        
+                    <div class="eventos-items">
+                        <ul>
+                            <li class="data"><p>08 JUL > 31 AGO</p></li>
+                            <li><h3>Farol Santander São Paulo</h3></li>
+                            <li class="address">
+                                <i class="fa-solid fa-location-dot"></i>
+                                <p>Farol Santander - São Paulo, SP</p>
+                            </li>
+                        </ul>
+                        <a  href="https://bileto.sympla.com.br/event/70862/d/143419" target="_blank" rel="external" alt="FarolSantander"><img class="saiba-mais" src="./imagens/saiba-mais-2.png" alt=""></a> 
+                    </div>                               
+                </div> 
+                <div class="eventos">
+                    <figure>
+                        <img src="./imagens/sampa-sky.webp" alt="imagem da cidade de São Paulo vista de um prédio">
+                    </figure>                        
+                    <div class="eventos-items">
+                        <ul>
+                            <li class="data"><p>12 JUL > 31 AGO</p></li>
+                            <li><h3>SAMPA SKY</h3></li>
+                            <li class="address">
+                                <i class="fa-solid fa-location-dot"></i>
+                                <p>Sampa Sky - São Paulo, SP</p>
+                            </li>
+                        </ul>
+                        <a  href="https://bileto.sympla.com.br/event/67668/d/142017" target="_blank" rel="external" alt="SampaSky"><img class="saiba-mais" src="./imagens/saiba-mais-2.png" alt=""></a> 
+                    </div>                               
+                </div>                 
+            </div>                   
+        </section>          
+    </main>   
     <footer>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sint maxime saepe perspiciatis molestias omnis voluptatibus asperiores a fugiat repellendus praesentium, aut nihil! Temporibus fugit iure aliquam aspernatur enim neque reiciendis reprehenderit deserunt quisquam totam. Aspernatur facilis animi explicabo at ducimus fugiat qui. Velit atque ducimus quo suscipit dicta veniam assumenda!</p>
         <p>&copy;Todos os direitos reservados.</p>
