[M1S02] Ex 4 - Listagem de eventos

--- a/modulo1/semana2/index.html
+++ b/modulo1/semana2/index.html
@@ -46,8 +46,8 @@
             </div>                       
             <a  href="https://www.sympla.com.br/evento/reveillon-vira-jeri-2023/1520594" target="_blank" rel="external"><img class="saiba-mais" src="./imagens/saiba-mais-2.png" alt="imagem botão saiba mais"></a>
         </section>
-        <section class="todos"> 
-            <h2>Todos os eventos</h2>            
+        <section class="turismo"> 
+            <h2>Turismo e exposições</h2>            
             <div class="eventos-todos">               
                 <div class="eventos">
                     <figure>
@@ -96,15 +96,67 @@
                         </ul>
                         <a  href="https://bileto.sympla.com.br/event/67668/d/142017" target="_blank" rel="external" alt="SampaSky"><img class="saiba-mais" src="./imagens/saiba-mais-2.png" alt=""></a> 
                     </div>                               
-                </div>                 
-            </div>                   
-        </section>          
-    </main>   
-    <footer>
+                </div>                                                               
+            </div>             
+        </section> 
+        <section class="cursos"> 
+            <h2>Cursos e workshops</h2>            
+            <div class="eventos-todos">               
+                <div class="eventos">
+                    <figure>
+                        <img src="./imagens/cambridge.png" alt="imagem Cambridge Day">
+                    </figure>                        
+                    <div class="eventos-items">
+                        <ul>
+                            <li class="data"><p>18 JUL 08:30 > 18:00</p></li>
+                            <li><h3>Cambridge Day 2022 - São Paulo + Online</h3></li>
+                            <li class="address">
+                                <i class="fa-solid fa-location-dot"></i>
+                                <p>Museu de Arte de São Paulo Assis Chateaubriand, São Paulo - SP</p>
+                            </li>
+                        </ul>
+                        <a  href="https://www.sympla.com.br/evento/cambridge-day-2022-sao-paulo-online/1605162" target="_blank" rel="external" alt="CambridgeDay"><img class="saiba-mais" src="./imagens/saiba-mais-2.png" alt=""></a> 
+                    </div>                               
+                </div>
+                <div class="eventos">
+                    <figure>
+                        <img src="./imagens/cambridge.png" alt="imagem Cambridge Day">
+                    </figure>                        
+                    <div class="eventos-items">
+                        <ul>
+                            <li class="data"><p>18 JUL 08:30 > 18:00</p></li>
+                            <li><h3>Cambridge Day 2022 - São Paulo + Online</h3></li>
+                            <li class="address">
+                                <i class="fa-solid fa-location-dot"></i>
+                                <p>Museu de Arte de São Paulo Assis Chateaubriand, São Paulo - SP</p>
+                            </li>
+                        </ul>
+                        <a  href="https://www.sympla.com.br/evento/cambridge-day-2022-sao-paulo-online/1605162" target="_blank" rel="external" alt="CambridgeDay"><img class="saiba-mais" src="./imagens/saiba-mais-2.png" alt=""></a> 
+                    </div>                               
+                </div>
+                <div class="eventos">
+                    <figure>
+                        <img src="./imagens/cambridge.png" alt="imagem Cambridge Day">
+                    </figure>                        
+                    <div class="eventos-items">
+                        <ul>
+                            <li class="data"><p>18 JUL 08:30 > 18:00</p></li>
+                            <li><h3>Cambridge Day 2022 - São Paulo + Online</h3></li>
+                            <li class="address">
+                                <i class="fa-solid fa-location-dot"></i>
+                                <p>Museu de Arte de São Paulo Assis Chateaubriand, São Paulo - SP</p>
+                            </li>
+                        </ul>
+                        <a  href="https://www.sympla.com.br/evento/cambridge-day-2022-sao-paulo-online/1605162" target="_blank" rel="external" alt="CambridgeDay"><img class="saiba-mais" src="./imagens/saiba-mais-2.png" alt=""></a> 
+                    </div>                               
+                </div>
+            </div>               
+        </section>         
+    </main> 
+    <footer>        
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sint maxime saepe perspiciatis molestias omnis voluptatibus asperiores a fugiat repellendus praesentium, aut nihil! Temporibus fugit iure aliquam aspernatur enim neque reiciendis reprehenderit deserunt quisquam totam. Aspernatur facilis animi explicabo at ducimus fugiat qui. Velit atque ducimus quo suscipit dicta veniam assumenda!</p>
         <p>&copy;Todos os direitos reservados.</p>
     </footer>  
     <script src="https://kit.fontawesome.com/eb13803bec.js" crossorigin="anonymous"></script>  
 </body>
-
 </html>
