[M1S02] Ex 5 - Formulário Contato

--- a/modulo1/semana2/index.html
+++ b/modulo1/semana2/index.html
@@ -152,7 +152,43 @@
                 </div>
             </div>               
         </section>         
-    </main> 
+    </main>
+    <section class="formulario" >
+        <div class="contato">
+            <div>
+                <h4>Contate-nos</h4>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eveniet obcaecati labore voluptatum?</p>
+            </div>
+            <div>
+                <h4>Siga-nos</h4>
+                <div class="redes">
+                    <a href="https://www.instagram.com/anders.aguiar/" target="_blank" rel="external" alt="Instagram"><img src="./imagens/instagram.png" alt="logo instagram"></a>
+                    <a href="https://www.linkedin.com/in/andersonlaguiar/" target="_blank" rel="external" alt="Linkedin"><img src="./imagens/linkedin.png" alt="logo instagram"></a>
+                    <a href="https://github.com/andersonaguia" target="_blank" rel="external" alt="Github"><img src="./imagens/github.png" alt="logo instagram"></a>
+                </div>
+            </div>            
+        </div>
+        <div class="formulario-campos">
+            <h3>Formulário de contato</h3>
+            <form action="" method="post">
+                <fieldset>
+                    <div>
+                        <input type="text" placeholder="Digite seu nome" autocomplete required>
+                    </div>                  
+                    <div>
+                        <input type="email" placeholder="Digite seu e-mail" autocomplete required>
+                    </div>
+                    <div>
+                        <textarea name="" id="" cols="30" rows="10" placeholder="Deixe-nos uma mensagem"></textarea>
+                    </div>                    
+                </fieldset>
+                <input type="submit" class="enviar">
+            </form> 
+
+        </div>
+        
+    </section>
+    
     <footer>        
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sint maxime saepe perspiciatis molestias omnis voluptatibus asperiores a fugiat repellendus praesentium, aut nihil! Temporibus fugit iure aliquam aspernatur enim neque reiciendis reprehenderit deserunt quisquam totam. Aspernatur facilis animi explicabo at ducimus fugiat qui. Velit atque ducimus quo suscipit dicta veniam assumenda!</p>
         <p>&copy;Todos os direitos reservados.</p>
