Conta bancaria Parte 2 #24

--- a/modulo1/semana4/index.html
+++ b/modulo1/semana4/index.html
@@ -57,8 +57,12 @@
                     <div class="login">                        
                             <h2>Clientes</h2> 
                             <select name="" id=""></select> 
-                          
-                                                                    
+                            <input type="text" placeholder="Valor">
+                            <select name="" id="">
+                                <option value="sacar">Sacar</option>
+                                <option value="depositar">Depositar</option>
+                            </select>
+                            <button>Confirmar</button>                                            
                     </div>
                 </div>                
             </main>   
