--- a/modulo1/semana4/index.html
+++ b/modulo1/semana4/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <title>Liberty</title>
 </head>
-<body>
+<body onload="exibeContas()">
     <div class="conteudo">
         <nav class="navbar">
             <div class="navbar-container">
@@ -56,7 +56,7 @@
                     </div>
                     <div class="login">                        
                             <h2>Clientes</h2> 
-                            <select name="" id=""></select> 
+                            <select name="" id="contas"></select> 
                             <input type="text" placeholder="Valor">
                             <select name="" id="">
                                 <option value="sacar">Sacar</option>
