Conta bancaria Parte 4 #28

--- a/modulo1/semana4/index.html
+++ b/modulo1/semana4/index.html
@@ -56,13 +56,13 @@
                     </div>
                     <div class="login">                        
                             <h2>Clientes</h2> 
-                            <select name="" id="contas"></select> 
-                            <input type="text" placeholder="Valor">
-                            <select name="" id="">
-                                <option value="sacar">Sacar</option>
-                                <option value="depositar">Depositar</option>
+                            <select name="" id="conta"></select> 
+                            <input type="text" placeholder="Valor" id="valor">
+                            <select name="operacao" id="operacao">
+                                <option value="saque">Saque</option>
+                                <option value="deposito">Deposito</option>
                             </select>
-                            <button>Confirmar</button>                                            
+                            <button id="confirmar">Confirmar</button>                                            
                     </div>
                 </div>                
             </main>   
