Classificação da idade  #38

--- a/modulo1/semana4/ex-9/index.html
+++ b/modulo1/semana4/ex-9/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Par ou Impar</title>
+    <title>Classificação de Idade</title>
 </head>
 <body>
-    <h1>Numero é par ou ímpar?</h1>
-    <input type="text" id="numero">
-    <button id="verificar">Verificar</button>
-
+    <h1>Classificação por Idade</h1>
+    <input type="text" placeholder="Informe sua idade" id="idade">
+    <button id="classificar">Classificar</button>
+    
     <script src="./index.js"></script>
 </body>
 </html>
